# abe-webapp

./: Cargo.toml  Dockerfile  docker_run.sh
src/: actions.rs  app_config.rs  lib.rs  main.rs  storage.rs
src/keys/authority_keys/: authority_public_key.json
src/keys/global_keys/: global_parameters.json
src/keys/user_keys/: user_private_key.json
src/storage/: storage.json
templates/: decrypt_storage.html.tera  decrypt_storage.html.tera:Zone.Identifier  encrypted_storage.html.tera  get_userkey.html.tera  index.html.tera  new_action.html.tera  update_storage.html.tera
