[package]
name = "abe-webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rabe = "0.2.7"
rocket = { version = "=0.5.0-rc.3" }
rocket_dyn_templates = { version = "=0.1.0-rc.3", features = ["tera"] }
tera = "1.12.0"
serde_json = { version = "1.0.96" }
serde = { version = "1.0.164", features = ["derive"]  }
tokio = { version = "1", features = ["full"] }
tempfile = "3.1.0"
# html-tera = "3.0"
# rocket_sync_db_pools = "0.5.0"